--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "lucide-react": "^0.447.0",
+    "moment-timezone": "^0.5.46",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
